# openFrameworks

./: .gitignore  .travis.yml  README.md
.github/workflows/: build-ios-tvos.yml  main.yml
addons/ofxAndroid/Java/cc/openframeworks/: OFActivity.java  OFAndroidLifeCycle.java  OFAndroidLifeCycleHelper.java  OFAndroidWindow.java  OFEGLConfigChooser.java  OFGLSurfaceView.java
addons/ofxAndroid/ofAndroidLib/: build.xml
addons/ofxAndroid/ofAndroidLib/src/cc/openframeworks/: OFActivity.java  OFAndroid.java  OFAndroidLifeCycleHelper.java
addons/ofxAndroid/src/: ofAppAndroidWindow.cpp
addons/ofxOpenCv/android/: settings.gradle
addons/ofxOpenCv/android/ofxOpenCVAndroid/: CMakeLists.txt  build.gradle
addons/ofxiOS/src/: ofxiOS.h  ofxiOSConstants.h
addons/ofxiOS/src/app/: ofAppiOSMetalWindow.h  ofAppiOSMetalWindow.mm  ofAppiOSWindow.h  ofAppiOSWindow.mm
addons/ofxiOS/src/core/: ofxiOSAppDelegate.h  ofxiOSAppDelegate.mm  ofxiOSEAGLView.mm  ofxiOSGLKView.h  ofxiOSGLKView.mm  ofxiOSGLKViewController.h  ofxiOSGLKViewController.mm  ofxiOSMTKView.h  ofxiOSMTKView.mm  ofxiOSMTKViewController.h  ofxiOSMTKViewController.mm  ofxiOSMetalView.h  ofxiOSMetalView.mm  ofxiOSMetalViewController.h  ofxiOSMetalViewController.mm  ofxiOSViewController.mm
addons/ofxiOS/src/gl/: EAGLKView.h
addons/ofxiOS/src/graphics/: EAMTKView.h  EAMTKView.m  MetalRenderer.h
addons/ofxiOS/src/utils/: ofxiOSExtras.h  ofxiOSKeyboard.mm
addons/ofxiOS/src/video/: AVFoundationVideoGrabber.mm  AVFoundationVideoPlayer.h  AVFoundationVideoPlayer.m  ofxiOSVideoPlayer.h  ofxiOSVideoPlayer.mm
apps/android/ambientApp/ofApp/: build.gradle
apps/android/ambientApp/ofApp/src/main/cpp/: ofApp.cpp
apps/android/ambientApp/ofApp/src/main/res/menu/: main_layout.xml
apps/android/androidEmptyExample/ofApp/: build.gradle
docs/: building_opencv_for_android.md
examples/android/androidEmptyExample/ofApp/: build.gradle
examples/android/androidOpenCVExample/ofApp/: build.gradle
examples/android/androidOpenCVExample/ofApp/src/main/cpp/: ofApp.cpp  ofApp.h
examples/android/androidOpenCVExample/ofApp/src/main/res/layout/: main_layout.xml
examples/android/androidOpenCVExample/ofApp/src/main/res/values-v14/: strings.xml
examples/android/androidOpenCVFaceExample/ofApp/: build.gradle
examples/android/androidOpenCVFaceExample/ofApp/src/main/: AndroidManifest.xml
examples/android/androidOpenCVFaceExample/ofApp/src/main/cpp/: CMakeLists.txt  main.cpp  ofApp.cpp  ofApp.h
examples/android/androidOpenCVFaceExample/ofApp/src/main/res/values/: strings.xml
examples/sound/soundPlayerExample/src/: ofApp.cpp  ofApp.h
export/osx/libs/: libfmodex.dylib
libs/openFrameworks/3d/: ofMesh.inl
libs/openFrameworks/app/: ofAppBaseWindow.h  ofAppRunner.cpp  ofAppRunner.h  ofWindowSettings.h
libs/openFrameworks/gl/: ofCoreBaseTypes.h  ofGLProgrammableRenderer.cpp  ofGLUtils.cpp  ofMetalBaseTypes.h  ofMetalProgrammableRenderer.cpp  ofMetalProgrammableRenderer.h  ofTexture.cpp  ofTexture.h
libs/openFrameworks/graphics/: ofCairoRenderer.cpp  ofTrueTypeFont.cpp
libs/openFrameworks/sound/: ofAVEngineSoundPlayer.mm  ofRtAudioSoundStream.cpp  ofRtAudioSoundStream.h
libs/openFrameworks/utils/: ofConstants.h  ofFpsCounter.cpp  ofFpsCounter.h  ofURLFileLoader.cpp
libs/openFrameworks/video/: ofAVFoundationGrabber.mm
libs/openFrameworksCompiled/project/android/: config.android.default.mk
libs/openFrameworksCompiled/project/android/openframeworksAndroid/: build.gradle
libs/openFrameworksCompiled/project/emscripten/: config.emscripten.default.mk
libs/openFrameworksCompiled/project/ios/: CoreOF.xcconfig
libs/openFrameworksCompiled/project/ios/iOS+OFLib.xcodeproj/: project.pbxproj
libs/openFrameworksCompiled/project/ios/iOS+OFLib.xcodeproj/xcshareddata/xcschemes/: iPhone+OF Static Library.xcscheme
libs/openFrameworksCompiled/project/osx/: CoreOF.xcconfig
libs/openFrameworksCompiled/project/osx/OSX+OFLib.xcodeproj/: project.pbxproj
libs/openFrameworksCompiled/project/osx/openFrameworksLib.xcodeproj/: project.pbxproj
scripts/ci/addons/: install.cmd
scripts/ci/android/: install.sh
scripts/ci/linuxarmv6l/: install.sh
scripts/ci/linuxarmv7l/: install.sh
scripts/dev/: create_package.sh  download_libs.sh  nightlybuilds.sh  release.sh
scripts/linux/ubuntu/: install_dependencies.sh
scripts/osx/: download_libs.sh
scripts/templates/ios/: ofxiOS_Prefix.pch
scripts/templates/ios/emptyExample.xcodeproj/: project.pbxproj
scripts/templates/osx/: openFrameworks-Info.plist
scripts/templates/osx/emptyExample.xcodeproj/: project.pbxproj
scripts/templates/osx/emptyExample.xcodeproj/xcshareddata/xcschemes/: emptyExample AppStore.xcscheme  emptyExample Debug.xcscheme  emptyExample Release.xcscheme
